Fix overflowing of AphrontSideNavFilterView on small screens and tidy up nav bar styles
Summary:
Switch the two column layout of AphrontSideNavFilterView (used in pretty much most views) from table to flex display. The former CSS rendering could lead to overflowing of the entire page on small screens if very wide unbreaking content is displayed (example described here: T15809).

While I was at it I have found some unused code. The CSS file `phabricator-nav-view.css` consisted almost only of `.phabricator-side-menu-home` class selectors. This is an ancient class (there at least since 2013) not used anymore:

https://we.phorge.it/source/phorge/browse/master/src/applications/directory/controller/PhabricatorDirectoryController.php;919bd4a03499305093d8882952a9dd3dac1c55a9$169

So I have removed this CSS component and saved the few still used declarations to the main `phui-basic-nav-view.css`.

There was some unused code in `AphrontSideNavFilterView.php` too.

Fixes T15809

Test Plan:
Look at this video to understand the problem:

F2178277

Go in a Task comment and mention a task with a very-long title. Have phd enabled to generate feeds. Visit homepage with feeds:

See that you cannot reproduce anymore.

Browse pages with the right nav bar with many devices and look if the layout looks fine and not broken.

Tested the homepage, scaling from mobile to desktop, using:

- Firefox 124 64bit on GNU/Linux (snap)
- Chromium 124 64bit on GNU/Linux (snap)
- ...

Tested other elements, scaling from mobile to desktop, still working correctly:

- popup dialogs
- right floating menu
- top curtain
    - notifications
    - Conpherence chats
    - unresolved setup issues
    - search omnibox

Reviewers: O1 Blessed Committers, aklapper

Reviewed By: O1 Blessed Committers, aklapper

Subscribers: aklapper, speck, tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15809

Differential Revision: https://we.phorge.it/D25619

--- a/webroot/rsrc/css/application/base/standard-page-view.css
+++ b/webroot/rsrc/css/application/base/standard-page-view.css
@@ -45,10 +45,6 @@ body.white-background {
   margin-left: 221px;
 }
 
-.device .phabricator-side-menu-home + .phabricator-standard-page-footer {
-  display: none;
-}
-
 .keyboard-shortcut-help {
   margin: 4px 12px;
 }
